# QtQuickStudyDemo

./: CMakeLists.txt  README.md  qml.qrc
QML/: DrawCanvas.qml  TopBar.qml  main.qml
src/: main.cpp
